# 3DGS

./: .dockerignore  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
docker/: brush.Dockerfile  fastergs.Dockerfile  gsplat.Dockerfile  lfs.Dockerfile  spirulae.Dockerfile
src/gs3/: gsplat_trainer.py  server.py  trainer.py
src/gs3/providers/: __init__.py  brush.py  fastergs.py  gsplat.py  lfs.py  spirulae.py
src/sceneapi_3dgs/: __init__.py  gsplat_trainer.py  server.py  trainer.py
src/sceneapi_3dgs/providers/: __init__.py  brush.py  fastergs.py  gsplat.py  lfs.py  spirulae.py
src/sfmapi_radiance/: __init__.py  gsplat_trainer.py  server.py  trainer.py
src/sfmapi_radiance/providers/: __init__.py  brush.py  fastergs.py  gsplat.py  lfs.py  spirulae.py
tests/: conftest.py  test_brush.py  test_fastergs.py  test_gsplat.py  test_import.py  test_lfs.py  test_protocol.py  test_trainer_engine.py
