[project]
name = "sceneapi-3dgs"
version = "0.1.0"
description = "sceneapi container-service plugin bundle for radiance training (Brush, gsplat, Faster-GS, LichtFeld Studio, spirulae-splat)."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    # fastapi + pydantic arrive via the sceneapi.plugin_service kit's own deps;
    # uvicorn stays explicit because server.main() imports it directly.
    "sceneapi>=0.1.0,<0.2",
    "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
# brush / lfs / spirulae / fastergs need no extras: their engines are native
# builds driven over subprocess (torch for spirulae/fastergs arrives via the
# container image, exactly as in the superseded per-provider repos).
# gsplat trains in process: pillow/numpy/pycolmap were its hard deps before
# the merge, and the old `cuda` extra (torch/gsplat/lpips) is folded into
# gsplat-cuda below.
gsplat = [
    "pillow>=10",
    "numpy>=1.26,<3",
    "pycolmap>=3.11",
]
gsplat-cuda = [
    "pillow>=10",
    "numpy>=1.26,<3",
    "pycolmap>=3.11",
    "torch==2.7.1",
    "gsplat==1.5.3",
    "lpips>=0.1.4",
]
# pillow/numpy/pycolmap let the test suite import the gsplat trainer (its
# CUDA paths stay monkeypatched, mirroring the old sfmapi_gsplat CI).
test = [
    "httpx>=0.28",
    "pytest>=8.3",
    "ruff>=0.11",
    "pillow>=10",
    "numpy>=1.26,<3",
    "pycolmap>=3.11",
]

# Console scripts keep their pre-rename names for this release — they are
# deployment-facing (container CMDs, launchers). No sceneapi-prefixed
# aliases are added at 0.1.0.
[project.scripts]
sfmapi-brush = "sceneapi_3dgs.server:brush_main"
sfmapi-gsplat = "sceneapi_3dgs.server:gsplat_main"
sfmapi-fastergs = "sceneapi_3dgs.server:fastergs_main"
sfmapi-lfs = "sceneapi_3dgs.server:lfs_main"
sfmapi-spirulae = "sceneapi_3dgs.server:spirulae_main"

[project.entry-points."sceneapi.backends"]
brush = "sceneapi_3dgs.providers.brush:plugin"
gsplat = "sceneapi_3dgs.providers.gsplat:plugin"
fastergs = "sceneapi_3dgs.providers.fastergs:plugin"
lfs = "sceneapi_3dgs.providers.lfs:plugin"
spirulae = "sceneapi_3dgs.providers.spirulae:plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sceneapi_3dgs"]

[tool.uv.sources]
sceneapi = { path = "../sfmapi", editable = true }

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PT", "RUF"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
